ELK/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elk
  labels:
    name: elk
    app.kubernetes.io/name: elk
    app.kubernetes.io/component: logging
