ELK/13-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-nodeport
  namespace: elk
  labels:
    app.kubernetes.io/name: elk
    app.kubernetes.io/component: elasticsearch
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      nodePort: 30920
      protocol: TCP
