ELK/31-kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk
  labels:
    app.kubernetes.io/name: elk
    app.kubernetes.io/component: kibana
spec:
  selector:
    app.kubernetes.io/name: kibana
  ports:
    - name: http
      port: 5601
      targetPort: 5601
      protocol: TCP
