ELK/42-logstash-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: elk
  labels:
    app.kubernetes.io/name: elk
    app.kubernetes.io/component: logstash
spec:
  selector:
    app.kubernetes.io/name: logstash
  ports:
    - name: beats
      port: 5044
      targetPort: 5044
      protocol: TCP
