ELK/43-logstash-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash-nodeport
  namespace: elk
  labels:
    app.kubernetes.io/name: elk
    app.kubernetes.io/component: logstash
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: logstash
  ports:
    - name: beats
      port: 5044
      targetPort: 5044
      nodePort: 30044
      protocol: TCP
